overlapping fix bug

--- a/style.css
+++ b/style.css
@@ -359,27 +359,15 @@ body {
 
     .resume .resume_profile {
         height: auto;
-        width: 60%; 
+        width: 100%; 
         margin: 0 auto; 
     }
 
     .resume .resume_left .resume_profile img {
         height: auto;
         width: 100%; 
-        object-fit: cover; 
-    }
-
-    .resume .resume_profile {
-        width: 100%; 
-        height: auto; 
-        margin: 0 auto; 
-    }
-    
-    .resume .resume_left .resume_profile img {
-        width: 100%; 
-        height: auto; 
-        object-fit: cover; 
-        display: block; 
+        object-fit: cover;
+        display: block;  
     }
 
     .resume .resume_left {
